unpackaged/main/default/objects/Service_Appointment_Parts__c/Service_Appointment_Parts__c.object-meta.xml
<CustomObject>
    <label>Service Appointment Parts</label>
    <nameField>
        <label>Service Appointment Parts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Appointment Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>