unpackaged/main/default/objects/Service_Appointment_Parts__c/fields/Consumable_Parts__c.field-meta.xml
<CustomField>
    <fullName>Consumable_Parts__c</fullName>
    <label>Consumable Parts</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Part_Type__c</field>
            <operation>equals</operation>
            <valueField>Consumable_Parts__c.Part_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Consumable_Parts__c</referenceTo>
    <relationshipLabel>Service Appointment Parts</relationshipLabel>
    <relationshipName>Service_Appointment_Parts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>