unpackaged/main/default/objects/Service_Appointment_Parts__c/fields/Part_Name__c.field-meta.xml
<CustomField>
    <fullName>Part_Name__c</fullName>
    <formula>Consumable_Parts__r.Part_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Name</label>
    <type>Text</type>
</CustomField>