unpackaged/main/default/objects/Service_Appointment_Parts__c/fields/Part_Type__c.field-meta.xml
<CustomField>
    <fullName>Part_Type__c</fullName>
    <label>Part Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Misc</fullName>
            </value>
            <value>
                <fullName>Ethernet Cabling</fullName>
            </value>
            <value>
                <fullName>Labels</fullName>
            </value>
            <value>
                <fullName>Small Cell Batteries</fullName>
            </value>
            <value>
                <fullName>Power</fullName>
            </value>
            <value>
                <fullName>Fiber Jumpers Single Mode</fullName>
            </value>
            <value>
                <fullName>Fiber Jumper Multi-Mode</fullName>
            </value>
            <value>
                <fullName>Attenuator LC</fullName>
            </value>
            <value>
                <fullName>Attenuator SC</fullName>
            </value>
            <value>
                <fullName>Attenuator FC</fullName>
            </value>
            <value>
                <fullName>Fiber Cleaning</fullName>
            </value>
            <value>
                <fullName>Comcast Expenses</fullName>
            </value>
            <value>
                <fullName>Expenses</fullName>
                <isActive>false</isActive>
                <label>Expenses</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>